--- a/Jogo da velha/estilo.css
+++ b/Jogo da velha/estilo.css
@@ -1,4 +1,3 @@
-
 main{
     border: 1px solid #400101;
     background-color:#B5A4BF;
@@ -29,4 +28,10 @@ h1{
   
    text-align: center;
    
+}
+#bt {
+    background-color: #400101;
+    color: #F2E3D5;
+    border: none;
+    margin: 10px;
 }
